แก้ไข ui -close #210
