# backend/controllers/prescription_controller.go
@@ -10,7 +10,7 @@ import (
 	"github.com/sut63/team01/ent/medicine"
 	"github.com/sut63/team01/ent/patientinfo"
 	"github.com/sut63/team01/ent/prescription"
-	"github.com/sut63/team01/ent/status"
+	
 )
 
 // PrescriptionController defines the struct for the Prescription controller
@@ -24,10 +24,10 @@ type Prescription struct {
 	DoctorID      int
 	PatientInfoID int
 	MedicineID    int
-	StatusID      int
-	Value         string
-	Symptom       string
-	Annotation    string
+
+	Value      string
+	Symptom    string
+	Annotation string
 }
 
 // CreatePrescription handles POST requests for adding Prescription entities
@@ -82,17 +82,7 @@ func (ctl *PrescriptionController) CreatePrescription(c *gin.Context) {
 		return
 	}
 
-	s, err := ctl.client.Status.
-		Query().
-		Where(status.IDEQ(int(obj.StatusID))).
-		Only(context.Background())
 
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Status not found",
-		})
-		return
-	}
 
 	var Value int
 	if v, err := strconv.ParseInt(obj.Value, 10, 64); err == nil {
@@ -132,7 +122,6 @@ func (ctl *PrescriptionController) CreatePrescription(c *gin.Context) {
 		SetPrescriptionpatient(P).
 		SetSymptom(obj.Symptom).
 		SetAnnotation(obj.Annotation).
-		SetPrescriptonstatus(s).
 		Save(context.Background())
 	if err != nil {
 		c.JSON(400, gin.H{
@@ -168,6 +157,9 @@ func (ctl *PrescriptionController) GetPrescription(c *gin.Context) {
 	}
 	u, err := ctl.client.Prescription.
 		Query().
+		WithPrescriptiondoctor().
+		WithPrescriptionmedicine().
+		WithPrescriptionpatient().
 		Where(prescription.IDEQ(int(id))).
 		Only(context.Background())
 	if err != nil {
@@ -212,7 +204,6 @@ func (ctl *PrescriptionController) ListPrescription(c *gin.Context) {
 		WithPrescriptiondoctor().
 		WithPrescriptionmedicine().
 		WithPrescriptionpatient().
-		WithPrescriptonstatus().
 		Limit(limit).
 		Offset(offset).
 		All(context.Background())
