# backend/docs/swagger.json
@@ -3278,183 +3278,6 @@
                     }
                 }
             }
-        },
-        "/statuss": {
-            "get": {
-                "description": "list status entities",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List status entities",
-                "operationId": "list-status",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Offset",
-                        "name": "offset",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/ent.Status"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create status",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Create status",
-                "operationId": "create-status",
-                "parameters": [
-                    {
-                        "description": "Status entity",
-                        "name": "status",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/ent.Status"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/ent.Status"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            }
-        },
-        "/statuss/{id}": {
-            "get": {
-                "description": "get status by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get a status entity by ID",
-                "operationId": "get-status",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Status ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/ent.Status"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "get status by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Delete a status entity by ID",
-                "operationId": "delete-status",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Status ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/gin.H"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -3575,9 +3398,6 @@
                     "type": "integer"
                 },
                 "patientInfoID": {
-                    "type": "integer"
-                },
-                "statusID": {
                     "type": "integer"
                 },
                 "symptom": {
@@ -4243,41 +4063,6 @@
                     "description": "Prescriptionpatient holds the value of the prescriptionpatient edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.PatientInfo"
-                },
-                "prescriptonstatus": {
-                    "description": "Prescriptonstatus holds the value of the prescriptonstatus edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.Status"
-                }
-            }
-        },
-        "ent.Status": {
-            "type": "object",
-            "properties": {
-                "edges": {
-                    "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the StatusQuery when eager-loading is set.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.StatusEdges"
-                },
-                "id": {
-                    "description": "ID of the ent.",
-                    "type": "integer"
-                },
-                "status": {
-                    "description": "Status holds the value of the \"status\" field.",
-                    "type": "string"
-                }
-            }
-        },
-        "ent.StatusEdges": {
-            "type": "object",
-            "properties": {
-                "statusprescription": {
-                    "description": "Statusprescription holds the value of the statusprescription edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.Prescription"
-                    }
                 }
             }
         },
