# backend/ent/schema/status.go
@@ -1,26 +1,0 @@
-package schema
-
-import (
-	"github.com/facebookincubator/ent"
-	"github.com/facebookincubator/ent/schema/edge"
-	"github.com/facebookincubator/ent/schema/field"
-)
-
-// Status holds the schema definition for the Status entity.
-type Status struct {
-	ent.Schema
-}
-
-// Fields of the Status.
-func (Status) Fields() []ent.Field {
-	return []ent.Field{
-		field.String("status").NotEmpty().Unique(),
-	}
-}
-
-// Edges of the Status.
-func (Status) Edges() []ent.Edge {
-	return []ent.Edge{
-		edge.To("statusprescription", Prescription.Type).StorageKey(edge.Column("status_id")),
-	}
-}
